not finished yet

--- a/app/views/all_positions/edit.html.erb
+++ b/app/views/all_positions/edit.html.erb
@@ -7,7 +7,7 @@
                             <div class="col-xs-12 col-sm-6">
                                 <h1 class="pull-left">
                                     <i class="icon-home"></i>
-                                    <span>新建广告位</span>
+                                    <span>编辑广告位</span>
                                 </h1>
                             </div>
                             <div class="clearfix"></div>
@@ -18,7 +18,6 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12">
                     <div class="box">
-
                         <div class="row">
                             <div class="col-xs-12 col-sm-12">
                                 <div class="box">
@@ -26,7 +25,7 @@
                                         <!--<form class="form form-horizontal" style="margin-bottom: 0;" method="post"
                                               action="advertising.html" accept-charset="UTF-8"><input name="authenticity_token"
                                                                                        type="hidden">-->
-																				<%= form_for @position, html: { class: "form form-horizontal", style: "margin-bottom: 0;" } do |f| %>
+																				<%= form_for @position, url: { action: :update }, html: { class: "form form-horizontal", style: "margin-bottom: 0;" } do |f| %>
                                             <div class="form-group">
                                                 <div class="form-group">
 <!--                                                    <label class="col-md-2 control-label" for="inputText1">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称</label>-->
@@ -46,8 +45,18 @@
 																												<%= f.text_field :url, class: "form-control" %>
                                                     </div>
                                                 </div>
-                                                
                                                 <div class="form-group">
+																										<%= f.label "所属媒体", class: "col-md-2 control-label" %>
+                                                    <div class="col-md-5">
+																												<%= f.select :publisher_id, options_for_select(Publisher.all.collect { |state| state.name }), {}, { class: "form-control" } %>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+																										<%= f.label "所属频道", class: "col-md-2 control-label" %>
+                                                    <div class="col-md-5">
+																												<%= f.select :channel_id, options_for_select(Channel.all.collect { |state| state.name }), {}, { class: "form-control" } %>
+                                                    </div>
+                                                </div>                                               <div class="form-group">
 <!--                                                    <label class="col-md-2 control-label" for="inputSelect4">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态</label>-->
 																								<%= f.label :Status, class: "col-md-2 control-label" %>
 
@@ -123,8 +132,6 @@
                                                                 Save
                                                             </button>
                                                             <button class="btn" type="submit">Cancel</button>-->
-																														<%= hidden_field_tag :publisher, params[:publisher] %>
-																														<%= hidden_field_tag :channel, params[:channel] %>
 																														<%= f.submit "Save", class: "btn btn-primary" %>
 
                                                         </div>
@@ -168,6 +175,14 @@
 
 <!-- project request -->
 <script type="text/javascript" src="/assets/project.js"></script>
+
+<script>
+    $(function () {
+        $("#cancel").click(function () {
+            window.location = "adSpace.html";
+        });
+    });
+</script>
 
 </body>
 </html>
