--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
                         </a>
                     </li>
                     <li class=''>
-                        <a href='/all_channels'>
+                        <a href='/all_positions'>
                             <i class='icon-caret-right'></i>
                             <span>广告位</span>
                         </a>
