--- a/app/views/all_positions/index.html.erb
+++ b/app/views/all_positions/index.html.erb
@@ -24,13 +24,13 @@
                            	    	<div class="panel panel-default">
                            	    		<div class="panel-heading">
                            	    			<div class="row">
-                           	    				<div class="col-xs-12 col-sm-6 text-left">
-                                                    <button onclick="window.location='createPosition?publisher='+gon.publisher+'&channel='+gon.channel;" id="createAdvertising" type="button" class="btn btn-primary">新&nbsp;&nbsp;建</button>
+                           	    				<div class="col-xs-12 col-sm-2 text-left">
+                                                    <button onclick="window.location='createAllPosition'" id="createAdSpace" type="button" class="btn btn-primary">新&nbsp;&nbsp;建</button>
                        	    				  	</div>
-                           	    				<!--<div class="col-xs-12 col-sm-6 text-right">
+                           	    				<div class="col-xs-12 col-sm-10 text-right">
                                                 
                            	    					<div class="row">
-                                                    	<div class="col-xs-5 col-sm-5">
+                                                    	<!--<div class="col-xs-5 col-sm-5">
                                                   			<div class="btn-group">
                            					    	 			筛选：按照
                            					      			</div>
@@ -40,20 +40,63 @@
                                                                     <option>广告位ID</option>
                                                                 </select>
                               					    		</div>
-                                                         </div>
-                                                        <div class="col-xs-7 col-sm-7">
-                                                             <div class="input-group">
-                                                                 <input class="form-control" placeholder="广告位ID、名称" type="text">
-                                                                 <span class="input-group-addon">
-                                                                     <i class="icon-search"></i>
-                                                                 </span>
-                                                             </div>
+                                                         </div>-->
+                                                        <div class="col-xs-2 col-sm-2">
+                                                            <div class="btn-group">
+                                                                媒体
+                                                            </div>
+                                                            <div class="btn-group">
+                                                                <select id="inputSelect" class="form-control">
+                                                                    <option>新浪</option>
+                                                                    <option>媒体2</option>
+                                                                </select>
+                                                            </div>
                                                         </div>
-                                                 </div>
-                       	    				  </div>-->
-																			<div class="col-xs-12 col-sm-6 text-right">
-                                                <div class="row">
-                                                    <div class="col-xs-5 col-sm-5">
+                                                        <div class="col-xs-2 col-sm-2">
+                                                            <div class="btn-group">
+                                                                频道
+                                                            </div>
+                                                            <div class="btn-group">
+                                                                <select id="inputSelect2" class="form-control">
+                                                                    <option>新浪</option>
+                                                                    <option>媒体2</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-xs-2 col-sm-2">
+                                                            <div class="btn-group">
+                                                                状态
+                                                            </div>
+                                                            <div class="btn-group">
+                                                                <select id="inputSelect3" class="form-control">
+                                                                    <option>新浪</option>
+                                                                    <option>媒体2</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-xs-2 col-sm-2">
+                                                            <div class="btn-group">
+                                                                格式
+                                                            </div>
+                                                            <div class="btn-group">
+                                                                <select id="inputSelect4" class="form-control">
+                                                                    <option>新浪</option>
+                                                                    <option>媒体2</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-xs-2 col-sm-2">
+                                                            <div class="btn-group">
+                                                                尺寸
+                                                            </div>
+                                                            <div class="btn-group">
+                                                                <select id="inputSelect5" class="form-control">
+                                                                    <option>新浪</option>
+                                                                    <option>媒体2</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+																												<div class="col-xs-5 col-sm-5">
                                                         <div class="btn-group">
                                                           	search by 
                                                         </div>
@@ -74,7 +117,18 @@
                                                                  </span>
                                                         </div>
                                                     </div>
-                                                </div>
+																												<!--
+                                                        <div class="col-xs-2 col-sm-2">
+                                                             <div class="input-group">
+                                                                 <input class="form-control" placeholder="搜索ID、名称" type="text">
+                                                                 <span class="input-group-addon">
+                                                                     <i class="icon-search"></i>
+                                                                 </span>
+                                                             </div>
+                                                        </div>
+																												-->
+                                                 </div>
+                       	    				  </div>
                            	    			</div>
                            	    		</div>
                            	    		<div class="panel-body">
@@ -86,6 +140,8 @@
                                             <th class="sorting">广告位ID</th>
 						                                <th class="text-center">广告位名称</th>
 																						<th class="text-center">Url</th>
+																						<th class="text-center">所属媒体</th>
+						                                <th class="text-center">所属频道</th>
 						                                <th class="text-center">状态</th>
 						                                <th class="text-center">广告类型</th>
 						                                <th class="text-center">物料类型</th>
@@ -109,13 +165,11 @@
                            	    	</div>
 	                         </div>
                    	      </div>
-
                         </div>
                       </div>
                     </div>
                 </div>
-            </div>
-	    </section>
+	        </section>
       <!-- your & Flatty javascripts -->
         <!-- / jquery [required] -->
     <script src="/assets/jquery/jquery.min.js" type="text/javascript"></script>
@@ -144,7 +198,7 @@
 
     <script type="text/javascript">
 				var grid;
-        $(function () {
+        $(function () {	
             //造数start
             var totalData = [
                 {id:2, name:"名称1", meiti:'媒体1', pindao:'频道1', status:'活动', xingshi:'形式1', geshi:'格式2', chicun:'100*100', daxiao:'100', toufang:"投放形式1", fangshi:'方式1', time:'2000-10-10', user:'user1'},
@@ -190,8 +244,8 @@
             //造数end
             grid = Grid.init({
                 holder: 'commonMedia',
-                bodyTemplate: '<tr><td>{id}</td><td>{name}</td><td>{url}</td><td>{status}</td><td>{type}</td><td>{material}</td><td>{layout}</td><td>{format}</td><td>{dimension}</td><td>{size}</td><td>{serving_type}</td><td>{payment_type}</td><td>{time}</td><td>{user}</td><td><a href="positions/{id}/edit?publisher='+gon.publisher+'&channel='+gon.channel+'">编辑</a> | <a data-confirm="Are you sure?" data-method="delete" href="/positions/{id}" rel="nofollow">删除</a> </td></tr>',
-                dataSource: '/getPositions?publisher='+gon.publisher+'&channel='+gon.channel,//url
+                bodyTemplate: '<tr><td>{id}</td><td>{name}</td><td>{url}</td><td>{publisher}</td><td>{channel}</td><td>{status}</td><td>{type}</td><td>{material}</td><td>{layout}</td><td>{format}</td><td>{dimension}</td><td>{size}</td><td>{serving_type}</td><td>{payment_type}</td><td>{time}</td><td>{user}</td><td><a href="all_positions/{id}/edit">编辑</a> | <a data-confirm="Are you sure?" data-method="delete" href="/all_positions/{id}" rel="nofollow">删除</a> </td></tr>',
+                dataSource: '/getAllPositions',//url
                 pageSize: 6,
                 sendOnPageSize: true
             });
@@ -223,8 +277,7 @@
                 search();
             }
         });
-
-//åç¹å»searchçbuttonæ¶è¦å
+				//åç¹å»searchçbuttonæ¶è¦å
         $("#searchBtn").click(function() {
             search();
         });
@@ -235,16 +288,18 @@
                 "searchType" : $("#searchType").val()
             });
         }
-        function viewDelete(id) {
-            return "<a href='javascript:void(0);' onclick='deleteAdvertising(+" + id + ")' >删除</a>";
+
+        function viewDelete(id){
+            return "<a href='javascript:void(0);' onclick='deleteAdSpace(+" + id + ")' >删除</a>";
         }
+        //全局变量，是否合适呢？暂时定为全局变量
         var popDelete = Pop.init({
-            width: 700,
-            height: 390,
-            modal: true,
-            title: '系统消息'
+            width:700,
+            height:390,
+            modal:true,
+            title:'系统消息'
         });
-        function deleteAdvertising(id) {
+        function deleteAdSpace(id){
             //后台判断是以哪种页面方式展现
             //看后台如何处理的，如果后台能够控制返回的页面那么可以采用showDialog的方式
             /**
@@ -253,8 +308,8 @@
 	         * }
              * 路径：js/dialog.js
              */
-                //popDelete.load("/media/deleteMedia.html");
-            popDelete.load("/media/deleteMedia1.html", {width: 500, height: 230});
+            //popDelete.load("/media/deleteMedia.html");
+            popDelete.load("/media/deleteAdSpace.html",{width: 500,height: 230});
         }
     </script>
 
