--- a/app/views/all_positions/new.html.erb
+++ b/app/views/all_positions/new.html.erb
@@ -26,7 +26,7 @@
                                         <!--<form class="form form-horizontal" style="margin-bottom: 0;" method="post"
                                               action="advertising.html" accept-charset="UTF-8"><input name="authenticity_token"
                                                                                        type="hidden">-->
-																				<%= form_for @position, html: { class: "form form-horizontal", style: "margin-bottom: 0;" } do |f| %>
+																				<%= form_for @position, url: { action: :index }, html: { class: "form form-horizontal", style: "margin-bottom: 0;" } do |f| %>
                                             <div class="form-group">
                                                 <div class="form-group">
 <!--                                                    <label class="col-md-2 control-label" for="inputText1">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称</label>-->
@@ -46,8 +46,18 @@
 																												<%= f.text_field :url, class: "form-control" %>
                                                     </div>
                                                 </div>
-                                                
                                                 <div class="form-group">
+																										<%= f.label "所属媒体", class: "col-md-2 control-label" %>
+                                                    <div class="col-md-5">
+																												<%= f.select :publisher_id, options_for_select(Publisher.all.collect { |state| state.name }), {}, { class: "form-control" } %>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+																										<%= f.label "所属频道", class: "col-md-2 control-label" %>
+                                                    <div class="col-md-5">
+																												<%= f.select :channel_id, options_for_select(Channel.all.collect { |state| state.name }), {}, { class: "form-control" } %>
+                                                    </div>
+                                                </div>                                               <div class="form-group">
 <!--                                                    <label class="col-md-2 control-label" for="inputSelect4">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态</label>-->
 																								<%= f.label :Status, class: "col-md-2 control-label" %>
 
@@ -123,8 +133,6 @@
                                                                 Save
                                                             </button>
                                                             <button class="btn" type="submit">Cancel</button>-->
-																														<%= hidden_field_tag :publisher, params[:publisher] %>
-																														<%= hidden_field_tag :channel, params[:channel] %>
 																														<%= f.submit "Save", class: "btn btn-primary" %>
 
                                                         </div>
