--- a/app/views/positions/edit.html.erb
+++ b/app/views/positions/edit.html.erb
@@ -7,7 +7,7 @@
                             <div class="col-xs-12 col-sm-6">
                                 <h1 class="pull-left">
                                     <i class="icon-home"></i>
-                                    <span>新建广告位</span>
+                                    <span>编辑广告位</span>
                                 </h1>
                             </div>
                             <div class="clearfix"></div>
@@ -18,7 +18,6 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12">
                     <div class="box">
-
                         <div class="row">
                             <div class="col-xs-12 col-sm-12">
                                 <div class="box">
@@ -30,7 +29,7 @@
                                             <div class="form-group">
                                                 <div class="form-group">
 <!--                                                    <label class="col-md-2 control-label" for="inputText1">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称</label>-->
-																										<%= f.label "名称", class: "col-md-2 control-label" %>
+																										<%= f.label "Name", class: "col-md-2 control-label" %>
                                                     <div class="col-md-5">
                                                         <!--<input class="form-control" id="inputText1"
                                                                placeholder="请填写名称." type="text">-->
@@ -168,6 +167,14 @@
 
 <!-- project request -->
 <script type="text/javascript" src="/assets/project.js"></script>
+
+<script>
+    $(function () {
+        $("#cancel").click(function () {
+            window.location = "adSpace.html";
+        });
+    });
+</script>
 
 </body>
 </html>
